fix photos filter on mobile

--- a/src/pages/Photos/styles.css
+++ b/src/pages/Photos/styles.css
@@ -1,14 +1,28 @@
 div#filters {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
+  column-gap: 2rem;
+  row-gap: .5em;
   margin-bottom: 2rem;
 }
-
+@media only screen and (max-width:425px) {
+  div#filters{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-inline: .5em;
+  }
+  #clear-filter{
+    grid-column: 1/3;
+  }
+}
 #filters a {
   border: 1px solid var(--primary);
   padding: 0.5em 1em;
   transition: all 0.25s ease;
+  white-space: nowrap;
+  text-align: center;
+  flex-basis: 36%;
 }
 #filters :is(a:hover, a:focus, a:active, .current) {
   color: #fff;
